# infod2023-tools

./: .gitignore  pyproject.toml
tools/: avarage.py  colorinfo.py  plot.py  scatter.py  similar.py
